typography for facets, switched to anchors

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
@@ -44,7 +44,7 @@
                   type="checkbox" 
                   id="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }"
                 />
-                <a href="#" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
+                <a href="${ facetValue.url }" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
 
                 <!--/* View More Facet Values */-->
                 <div data-sly-test="${ facetValueList.count == data.config.facetValuesMinVisible }"
@@ -63,7 +63,7 @@
                   type="radio"
                   id="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }"
                 />
-                <a href="#" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
+                <a href="${ facetValue.url }" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
 
                 <!--/* View More Facet Values */-->
                 <div data-sly-test="${ facetValueList.count == data.config.facetValuesMinVisible }"
