--- a/eaton.frontend/src/global/css/utils/_utils.scss
+++ b/eaton.frontend/src/global/css/utils/_utils.scss
@@ -72,6 +72,7 @@
 .u-show { display: block; }
 .u-show-inline { display: inline; }
 .u-show-ib { display: inline-block; }
+.u-show-inline-block { display: inline-block; }
 
 .u-hidden { visibility: hidden; }
 .u-visible { visibility: visible; }
