Aligning the search-box contents to the edge of the container

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-primary-nav.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-primary-nav.html
@@ -4,7 +4,7 @@
       <div class="row">
 
         <!--/* Search Form */-->
-        <form class="eaton-search__form eaton-search--default__form" data-form-action="${data.form.searchResultsPath}">
+        <form class="col-xs-12 eaton-search__form eaton-search--default__form" data-form-action="${data.form.searchResultsPath}">
           <div class="form-group">
             <label for="mega-menu-search" class="sr-only">${data.header}</label>
             <input type="text"
