--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -24,6 +24,14 @@
 
 .dark-theme .eaton-search--default { background: #333F48; }
 
+.eaton-search--default ::-webkit-input-placeholder { /* Chrome/Opera/Safari */ color: #FFF; }
+
+.eaton-search--default ::-moz-placeholder { /* Firefox 19+ */ color: #FFF; }
+
+.eaton-search--default :-ms-input-placeholder { /* IE 10+ */ color: #FFF; }
+
+.eaton-search--default :-moz-placeholder { /* Firefox 18- */ color: #FFF; }
+
 .eaton-search-box { background-color: #005EB8; padding: 30px; }
 
 .eaton-search-box__form { padding: 0 15px; position: relative; }
@@ -86,3 +94,11 @@
 .eaton-search .form-control:focus { outline: none; }
 
 .eaton-search__submit { -webkit-appearance: none; -moz-appearance: none; appearance: none; border: 0; }
+
+.eaton-search ::-webkit-input-placeholder { /* Chrome/Opera/Safari */ color: #FFF; }
+
+.eaton-search ::-moz-placeholder { /* Firefox 19+ */ color: #FFF; }
+
+.eaton-search :-ms-input-placeholder { /* IE 10+ */ color: #FFF; }
+
+.eaton-search :-moz-placeholder { /* Firefox 18- */ color: #FFF; }
