--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -47,7 +47,7 @@
   @include media-mobile-and-tablet {
     position: fixed;
     bottom: 0;
-    z-index: 5;
+    z-index: 13; /* Higher Stacking order than Primary Nav but Less than Search */
     width: 100%;
     right: 0;
     opacity: 0;
