--- a/eaton.frontend/src/components/search-box/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-primary-nav.scss
@@ -14,13 +14,11 @@
   }
 
   .icon-search {
-    font-size: 1.5em;
     top: 2px;
     position: relative;
   }
 
   &__form-input { // Styles for Form Elements
-    font-size: 1.5em;
     color: $color__white;
     background: transparent;
     padding: 0;
@@ -36,16 +34,54 @@
     background: $color__primary-gray1;
   }
 
+  //-----------------------------------
+  // Selector styles - Form Placeholder
+  //-----------------------------------
+
   ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: $color__white;
   }
+
   ::-moz-placeholder { /* Firefox 19+ */
     color: $color__white;
   }
+
   :-ms-input-placeholder { /* IE 10+ */
     color: $color__white;
   }
+
   :-moz-placeholder { /* Firefox 18- */
     color: $color__white;
+  }
+
+  //-----------------------------------
+  // Mobile Breakpoint
+  //-----------------------------------
+  @include media-mobile-and-tablet {
+    &__form-input {
+      font-size: 1em;
+    }
+
+    &__form-submit {
+      padding-right: 0;
+    }
+
+    .icon-search {
+      font-size: 1.25em;
+    }
+
+    .search-open & {
+      height: 100%;
+    }
+  }
+
+  //-----------------------------------
+  // Desktop Breakpoint
+  //-----------------------------------
+  @include media-desktop-and-up {
+    &__form-input,
+    .icon-search {
+      font-size: 1.5em;
+    }
   }
 }
