--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -16,9 +16,9 @@
 
 .eaton-search--default .form-group { display: -webkit-box; display: -ms-flexbox; display: flex; border-bottom: 1px solid #FFF; margin-bottom: 0; }
 
-.eaton-search--default .icon-search { font-size: 1.5em; top: 2px; position: relative; }
+.eaton-search--default .icon-search { top: 2px; position: relative; }
 
-.eaton-search--default__form-input { font-size: 1.5em; color: #FFF; background: transparent; padding: 0; }
+.eaton-search--default__form-input { color: #FFF; background: transparent; padding: 0; }
 
 .eaton-search--default__form-submit { color: #FFF; background: transparent; padding: 10px 20px; }
 
@@ -31,6 +31,13 @@
 .eaton-search--default :-ms-input-placeholder { /* IE 10+ */ color: #FFF; }
 
 .eaton-search--default :-moz-placeholder { /* Firefox 18- */ color: #FFF; }
+
+@media screen and (max-width: 991px) { .eaton-search--default__form-input { font-size: 1em; }
+  .eaton-search--default__form-submit { padding-right: 0; }
+  .eaton-search--default .icon-search { font-size: 1.25em; }
+  .search-open .eaton-search--default { height: 100%; } }
+
+@media screen and (min-width: 992px) { .eaton-search--default__form-input, .eaton-search--default .icon-search { font-size: 1.5em; } }
 
 .eaton-search-box { background-color: #005EB8; padding: 30px; }
 
@@ -94,11 +101,3 @@
 .eaton-search .form-control:focus { outline: none; }
 
 .eaton-search__submit { -webkit-appearance: none; -moz-appearance: none; appearance: none; border: 0; }
-
-.eaton-search ::-webkit-input-placeholder { /* Chrome/Opera/Safari */ color: #FFF; }
-
-.eaton-search ::-moz-placeholder { /* Firefox 19+ */ color: #FFF; }
-
-.eaton-search :-ms-input-placeholder { /* IE 10+ */ color: #FFF; }
-
-.eaton-search :-moz-placeholder { /* Firefox 18- */ color: #FFF; }
