Update Search Results Modules + Fix Typos

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/partials/content-type--family.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/partials/content-type--family.html
@@ -9,7 +9,7 @@
     <div class="results-list-module__image-wrapper b-body-copy-small">
       <a href="${ data.contentItem.link.url @ context='uri' }"
         class="results-list-module__image-link"
-        target="${ data.productItem.link.target }"
+        target="${ data.contentItem.link.target }"
       >
         <img src="${ data.contentItem.imgSrc }"
           class="results-list-module__image"
