add padding to upsell products component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/upsell-products/views/view-upsell-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/upsell-products/views/view-upsell-products.html
@@ -1,6 +1,6 @@
 <sly data-sly-use.data="${ '../data/view-upsell-products-data.js' @testdata=properties.testdata }">
     <div class="related-products-component container">
-        <div>
+        <div class="related-products-component__text">
             <h3>${'Designated to work together' @ i18N}</h3>
             <p>${'Discover other Eaton products and accesories built to enhance this product.' @ i18N}</p>
         </div>
