--- a/eaton.frontend/src/components/list/css/views/_view-related-products.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-related-products.scss
@@ -2,6 +2,11 @@
 
   padding: 30px 0;
 
+  &__text {
+    padding-left: 15px;
+    padding-bottom: 30px;
+  }
+
   &__card {
     background-color: $color__secondary-gray6;
     padding: 0 15px;
