--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -85,6 +85,8 @@
 
 .related-products-component { padding: 30px 0; }
 
+.related-products-component__text { padding-left: 15px; padding-bottom: 30px; }
+
 .related-products-component__card { background-color: #F8F8F8; padding: 0 15px; margin-right: 15px; border: 1px solid #EEF0F2; }
 
 .related-products-component__title { padding-top: 15px; }
