--- a/eaton.frontend/src/global/css/base/elements/_buttons.scss
+++ b/eaton.frontend/src/global/css/base/elements/_buttons.scss
@@ -11,6 +11,7 @@
 
 .b-button {
   background: none;
+  text-shadow: none;
   border-radius: 0;
   border-style: solid;
   display: inline-block;
@@ -25,7 +26,8 @@
     font-size: 1.25em;
     padding: 20px 40px;
 
-    &--light {
+    // Use chained selectors in order to override default <a> tag styles
+    &.b-button__primary--light {
       border-color: $color__primary-blue;
       color: $color__primary-blue;
 
@@ -38,7 +40,9 @@
       }
     }
 
-    &--dark {
+
+    // Use chained selectors in order to override default <a> tag styles
+    &.b-button__primary--dark {
       border-color: $color__white;
       color: $color__white;
 
@@ -61,7 +65,8 @@
     font-size: 0.875em;
     padding: 20px;
 
-    &--light {
+    // Use chained selectors in order to override default <a> tag styles
+    &.b-button__secondary--light {
       border-color: $color__primary-blue;
       color: $color__primary-blue;
 
@@ -74,7 +79,8 @@
       }
     }
 
-    &--dark {
+    // Use chained selectors in order to override default <a> tag styles
+    &.b-button__secondary--dark {
       border-color: $color__white;
       color: $color__white;
 
@@ -96,7 +102,8 @@
     font-size: 1.25em;
     padding: 20px 40px;
 
-    &--light {
+    // Use chained selectors in order to override default <a> tag styles
+    &.b-button__tertiary--light {
       border-color: $color__primary-blue;
       background-color: $color__primary-blue;
       color: $color__white;
@@ -110,7 +117,8 @@
       }
     }
 
-    &--dark {
+    // Use chained selectors in order to override default <a> tag styles
+    &.b-button__tertiary--dark {
       border: 0;
       background-color: $color__primary-blue;
       color: $color__white;
