Search Results, move “Clear filters” Link to the data-model

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
@@ -40,8 +40,9 @@
 
         <!--/* Clear Filters */-->
         <div class="faceted-navigation-header__filters-actions">
-          <a href="#clear-filters"
-            class="faceted-navigation-header__action-link">${ 'Clear filters' @ i18n }</a>
+          <a href="${ data.clearAllFiltersLink.url }"
+            target="${ data.clearAllFiltersLink.target }"
+            class="faceted-navigation-header__action-link">${ data.clearAllFiltersLink.text }</a>
         </div>
       </div>
 
