--- a/eaton.frontend/src/shared/module-table/css/module-table.scss
+++ b/eaton.frontend/src/shared/module-table/css/module-table.scss
@@ -62,7 +62,7 @@
     }
 
     &__row {
-      align-items: center;
+      align-items: flex-start;
       display: flex;
       padding: 26px 20px;
     }
