--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-table/css/module-table.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-table/css/module-table.css
@@ -9,5 +9,5 @@
 
 @media screen and (min-width: 992px) { .module-table { margin-bottom: 60px; }
   .module-table__head { margin-bottom: 48px; }
-  .module-table__row { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; padding: 26px 20px; }
+  .module-table__row { -webkit-box-align: start; -ms-flex-align: start; align-items: flex-start; display: -webkit-box; display: -ms-flexbox; display: flex; padding: 26px 20px; }
   .module-table__col { -ms-flex-preferred-size: 50%; flex-basis: 50%; } }
