--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -115,6 +115,21 @@
     overflow: hidden;
     position: fixed;
     width: 100%;
+
+      .header-primary-nav__open-search {
+        transition: background 0.3s ease-in-out;
+        background: $color__primary-gray1;
+
+        .icon-search {
+          display: none;
+        }
+
+        .icon-close {
+          display: block;
+          top: -3px;
+          font-size: 18px;
+        }
+      }
   }
 }
 
