--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -40,8 +40,12 @@
   .header-primary-nav__menu::after { content: ''; height: 30px; width: 1px; background: #98A4AE; position: absolute; top: 36px; right: 0; }
   .eaton-header--fixed .header-primary-nav__menu::after { top: 26px; right: 7px; }
   .header-primary-nav__links i { top: -5px; }
-  .header-primary-nav__open-search { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; height: 90px; padding: 30px; margin-top: 10px; }
+  .header-primary-nav__open-search { display: -webkit-box; display: -ms-flexbox; display: flex; height: 90px; padding: 30px; margin-top: 10px; }
+  .header-primary-nav__open-search .icon-close { display: none; }
   .eaton-header--fixed .header-primary-nav__open-search { height: 70px; padding: 20px; }
+  .search-open .header-primary-nav__open-search { -webkit-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; background: #333F48; }
+  .search-open .header-primary-nav__open-search .icon-search { display: none; }
+  .search-open .header-primary-nav__open-search .icon-close { display: block; top: -5px; font-size: 18px; color: #FFF; }
   .header-primary-nav__toggle-mobile-menu { display: none; } }
 
 .header-search { width: 100%; -webkit-transform: translateY(-100%); transform: translateY(-100%); overflow: hidden; visibility: hidden; -webkit-transition: visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; transition: visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out; transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; }
@@ -71,7 +75,10 @@
   .level-2-open .eaton-link-list-primary-nav { -webkit-transform: translate(-100%, 0); transform: translate(-100%, 0); }
   .level-2-open .mega-menu { -webkit-transform: translate(0, 0); transform: translate(0, 0); }
   .nav-is-animating .mega-menu { -webkit-transition: -webkit-transform 0.5s ease-in-out; transition: -webkit-transform 0.5s ease-in-out; transition: transform 0.5s ease-in-out; transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out; }
-  .search-open { overflow: hidden; position: fixed; width: 100%; } }
+  .search-open { overflow: hidden; position: fixed; width: 100%; }
+  .search-open .header-primary-nav__open-search { -webkit-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; background: #333F48; }
+  .search-open .header-primary-nav__open-search .icon-search { display: none; }
+  .search-open .header-primary-nav__open-search .icon-close { display: block; top: -3px; font-size: 18px; } }
 
 @media screen and (min-width: 992px) { .level-2-open .mega-menu { visibility: visible; opacity: 1; } }
 
