added spaccing and bug fixing

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/share-cta/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/share-cta/views/view-default.html
@@ -2,6 +2,7 @@
   <!--/* M-6 Page Utility Module - Share CTA */-->
   <div class="eaton-product-share-cta pull-right">
     <a  data-sly-test="${ data.cta }"
+        target="${ data.cta.target }"
         href="${ data.cta.href }"
         aria-label="${ data.cta.title }">
       <i class="icon icon-share" aria-hidden="true"></i>
