--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-intra-tab-link.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-intra-tab-link.html
@@ -2,10 +2,11 @@
 <template data-sly-template.data="${ @ data }">
   <div class="module-intra-tab-link">
     <div class="container">
-      <a  data-sly-test="${ data.cta }"
-          href="${ data.cta.href }"
-          aria-label="${ data.cta.title }">
-        <span>${ data.cta.title }</span>
+      <a  data-sly-test="${ data }"
+          target="${ data.target }"
+          href="${ data.href }"
+          aria-label="${ data.title }">
+        <span>${ data.title }</span>
         <i class="icon icon-chevron-right" aria-hidden="true"></i>
       </a>
     </div>
