--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/live-chat-cta/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/live-chat-cta/views/view-default.html
@@ -3,6 +3,7 @@
   <div class="eaton-product-live-chat pull-right">
     <a  data-sly-test="${ data.cta }"
         href="${ data.cta.href }"
+        target="${ data.cta.target }"
         aria-label="${ data.cta.title }">
       <i class="icon icon-livechat" aria-hidden="true"></i><span>${ data.cta.title }</span>
     </a>
